import org.jetbrains.changelog.Changelog
import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType
import org.jetbrains.intellij.platform.gradle.TestFrameworkType

plugins {
    id("java")
    id("org.jetbrains.intellij.platform")
    id("org.jetbrains.changelog")
}

// ----------------------------------------------------------------------------
// Repositories + dependencies
// ----------------------------------------------------------------------------

repositories {
    mavenCentral()
    intellijPlatform {
        defaultRepositories()
    }
}

dependencies {
    // The annotation + processor + mutator live in the sibling library
    // module. implementation scope puts the library jar on the plugin's
    // runtime classpath and gets it bundled under lib/ in the IntelliJ
    // plugin distribution zip so the IDE can load it at runtime.
    implementation(project(":library"))

    intellijPlatform {
        // Compile + runIde target. Bumped from IC 2023.3 to the unified
        // IntellijIdea 2025.3 because the older sandbox IDE's Tooling-API
        // client crashes on Gradle 9 with NoSuchMethodError on the removed
        // IdeaModule.getTestSourceDirs(). 2025.3 (released after Gradle 9.0)
        // is Gradle-9-aware. sinceBuild = "232" stays put so marketplace
        // compatibility floor is unchanged; the Plugin Verifier matrix
        // (2023.3 / 2024.3 / 2025.3) catches any API drift introduced by
        // compiling against a newer platform.
        create(IntelliJPlatformType.IntellijIdea, "2025.3")
        testFramework(TestFrameworkType.Platform)
        // Since IC 2023.3, UsefulTestCase's static initializer references
        // com.intellij.testFramework.common.TestEnvironmentKt, which ships in
        // the IDE's bundled lib/testFramework.jar rather than the Maven
        // test-framework artifact. Pull the bundled jar explicitly; without
        // it every test fails to initialize with NoClassDefFoundError.
        testFramework(TestFrameworkType.Bundled)
        // Adds LightJavaCodeInsightFixtureTestCase + JAVA_NN project descriptors
        // (mock JDK), needed by AnnotationTest / ClassBuilder*Test for proper
        // String/Object resolution during inspection highlighting.
        testFramework(TestFrameworkType.Plugin.Java)
        bundledPlugin("com.intellij.java")
    }

    testImplementation("junit:junit:4.13.2")
    // The bundled IntelliJ test framework loads classes that reference
    // org.opentest4j.AssertionFailedError but doesn't bring opentest4j onto
    // the test runtime classpath transitively. Without this explicit pin
    // every BasePlatformTestCase fails with NoClassDefFoundError before any
    // test method runs. Pinning 1.3.0 because that's already in the local
    // Gradle cache from the JUnit 5 transitive set; the API surface this
    // path uses (AssertionFailedError + ValueWrapper) has been stable since
    // 1.0.
    testImplementation("org.opentest4j:opentest4j:1.3.0")
}

// ----------------------------------------------------------------------------
// Java configuration
// ----------------------------------------------------------------------------

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Those two settle the language level and the bytecode version, and neither
// looks at which API is being called: compiling on a newer JDK still links
// against that JDK's class library, so a method added after 17 resolves here
// and is missing in the IDE that loads the plugin. `release` links against the
// 17 API itself, which turns that into a compile error instead of a
// NoSuchMethodError somebody hits in an editor. The oldest IDE this plugin
// supports runs 17, so 17 is the surface it may use.
tasks.withType<JavaCompile>().configureEach {
    options.release.set(17)
}

// ----------------------------------------------------------------------------
// IntelliJ platform: plugin metadata + verifier
// ----------------------------------------------------------------------------

// The default buildPlugin zip derives its name from the subproject
// ("plugin"), producing plugin-<version>.zip. Override to "Simplified-
// Annotations" so the final artifact reads "Simplified-Annotations-
// <version>.zip" and the internal folder matches. Cannot use
// rootProject.name here since the repo is named "annotations" but the
// plugin's display name on the marketplace is "Simplified Annotations".
tasks.named<Zip>("buildPlugin") {
    archiveBaseName = "Simplified-Annotations"
}

// ----------------------------------------------------------------------------
// demo source set
//
// Hand-tuned consumer fixture for capturing JetBrains Marketplace screenshots.
// Mirrors the :library showcase pattern: not published, not on :plugin's main
// or test classpath, lives at plugin/src/demo/java. Open the plugin/src/demo
// directory inside the runIde sandbox to capture each shot listed in
// plugin/src/demo/SCREENSHOTS.md.
// ----------------------------------------------------------------------------

sourceSets {
    create("demo") {
        java.srcDir("src/demo/java")
        resources.srcDir("src/demo/resources")
        compileClasspath += sourceSets.main.get().output + configurations.compileClasspath.get()
        runtimeClasspath += output + compileClasspath
    }
}

tasks.named<JavaCompile>("compileDemoJava") {
    // The library's APT processor opens the jdk.compiler/com.sun.tools.javac.*
    // packages itself via JavacAccess, so consumer compiles need no fork args.
    // Mirror :library's compileShowcaseJava wiring: feed the unpacked main
    // output (classes + META-INF/services) into the processor path so the
    // ServiceLoader finds ClassBuilderProcessor without rebuilding the jar.
    val library = project(":library")
    options.annotationProcessorPath = files(library.sourceSets.main.get().output) +
        library.configurations.compileClasspath.get()
}

intellijPlatform {
    pluginConfiguration {
        name = "Simplified Annotations"

        ideaVersion {
            sinceBuild = "232"
        }

        // Pulled from CHANGELOG.md (at the repo root) by the changelog plugin.
        // Renders only the current release's section; older versions stay
        // discoverable on the marketplace's release-history view.
        changeNotes = provider {
            with(changelog) {
                renderItem(
                    (getOrNull(project.version.toString()) ?: getUnreleased())
                        .withHeader(false)
                        .withEmptySections(false),
                    Changelog.OutputType.HTML
                )
            }
        }
    }
    // Task requires a running IDE (233+) since IntelliJ Platform Gradle Plugin
    // 2.14.0, but we still compile against 232. Disabling skips the marketplace-
    // settings pre-index step; plugin still loads fine in 2023.2+ consumers.
    buildSearchableOptions = false

    // Plugin Verifier: catches API breakage across IDE versions before users
    // hit it. Pinned to explicit released builds rather than recommended()
    // because the latter pulls in unreleased EAP IDEs that fail to download.
    pluginVerification {
        ides {
            // Community distribution was retired after 2024.3; 2025.3+ ships
            // only the unified IntellijIdea type (Community + Ultimate merged).
            create(IntelliJPlatformType.IntellijIdeaCommunity, "2023.3")
            create(IntelliJPlatformType.IntellijIdeaCommunity, "2024.3")
            create(IntelliJPlatformType.IntellijIdea, "2025.3")
            create(IntelliJPlatformType.IntellijIdea, "2026.1")
        }
    }
}

// ----------------------------------------------------------------------------
// HandWrittenPairCorpusTest measures the two hand-written-pair inspections
// against a real source tree, which has to be named from outside the build.
// Forwarded rather than hardcoded: the test skips when the property is absent,
// so an ordinary run is unaffected and no checkout needs the directory to exist.
//
//   ./gradlew :plugin:test --tests "*HandWrittenPairCorpusTest" -Pcorpus.dir=<path>
// ----------------------------------------------------------------------------

tasks.test {
    (project.findProperty("corpus.dir") as String?)?.let { systemProperty("corpus.dir", it) }
}

// ----------------------------------------------------------------------------
// Changelog plugin: drives changeNotes above by parsing CHANGELOG.md.
// Lives at the repo root so both modules can reference the same source.
// ----------------------------------------------------------------------------

changelog {
    version.set(project.version.toString())
    path.set(rootProject.file("CHANGELOG.md").canonicalPath)
    groups.set(listOf("Added", "Changed", "Deprecated", "Removed", "Fixed", "Security"))
    keepUnreleasedSection.set(true)
}

